--- a/homemodif.html
+++ b/homemodif.html
@@ -42,9 +42,9 @@
     <div class="container d-flex">
 
       <div class="logo mr-auto">
-        <h1 class="text-light"><a href="homemodif.html"><img src="/assets/img/logo.png" alt="LOGO"><!--<span>Scaffold</span>--></a></h1>
+        <h1 class="text-light">  <!--<a href="homemodif.html"><img src="/assets/img/logo.png" alt="LOGO"><span>Scaffold</span></a>--> </h1>
         <!-- Uncomment below if you prefer to use an image logo -->
-        <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+        <a href="homemodif.html"><img src="assets/img/logo.png" alt="LOGO" class="img-fluid"></a>
       </div>
 
       <nav class="nav-menu d-none d-lg-block">
@@ -165,7 +165,7 @@
     <div class="row">
       <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in">
         <div class="icon-box icon-box-pink">
-          <div class="icon"><img class="iconoimag" src="/assets/img/iconos/icono-13.png" alt="elegi">
+          <div class="icon"><img class="iconoimag" src="assets/img/iconos/icono-13.png" alt="Elegi">
             <!--<i class="bx bxl-dribbble"></i>--></div>
          <!-- <h4 class="title"><a href="">Seleccioná</a></h4>-->
           <p class="description"><strong>Seleccioná</strong> el plan que <br>
@@ -175,7 +175,7 @@
 
        <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="100">
         <div class="icon-box icon-box-cyan">
-          <div class="icon"><img class="iconoimag" src="/assets/img/iconos/icono-14.png" alt="gustos"><!--<i class="bx bx-file"></i>--></div>
+          <div class="icon"><img class="iconoimag" src="assets/img/iconos/icono-14.png" alt="Gustos"><!--<i class="bx bx-file"></i>--></div>
          <!-- <h4 class="title"><a href="">Ingresá</a></h4>-->
           <p class="description"> <strong>Ingresá</strong> los gustos de tu <br>
              mascota, raza,
@@ -185,7 +185,7 @@
 
        <div class="col-md-6 col-lg-4 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="200">
         <div class="icon-box icon-box-green">
-          <div class="icon"><img class="iconoimag" src="/assets/img/iconos/icono-15.png" alt="delivery"> <!--<i class="bx bx-tachometer"></i>--></div>
+          <div class="icon"><img class="iconoimag" src="assets/img/iconos/icono-15.png" alt="Delivery"> <!--<i class="bx bx-tachometer"></i>--></div>
           <!--<h4 class="title"><a href="">Recibí</a></h4>-->
           <p class="description"><strong>Recibí</strong> dentro de las <br>
              48hs. y preparate para <br>
