--- a/homemodif.html
+++ b/homemodif.html
@@ -168,8 +168,8 @@
           <div class="icon"><img class="iconoimag" src="assets/img/iconos/icono-13.png" alt="Elegi">
             <!--<i class="bx bxl-dribbble"></i>--></div>
          <!-- <h4 class="title"><a href="">Seleccioná</a></h4>-->
-          <p class="description"><strong>Seleccioná</strong> el plan que <br>
-             más te guste desde<br> nuestra web</p>
+          <p class="description"><strong>Seleccioná</strong> el plan que 
+             más te guste desde nuestra web</p>
         </div>
         </div>
 
@@ -177,9 +177,9 @@
         <div class="icon-box icon-box-cyan">
           <div class="icon"><img class="iconoimag" src="assets/img/iconos/icono-14.png" alt="Gustos"><!--<i class="bx bx-file"></i>--></div>
          <!-- <h4 class="title"><a href="">Ingresá</a></h4>-->
-          <p class="description"> <strong>Ingresá</strong> los gustos de tu <br>
+          <p class="description"> <strong>Ingresá</strong> los gustos de tu 
              mascota, raza,
-            edad, nombre<br> y domicilio de entrega</p>
+            edad y nombre </p>
         </div>
        </div>
 
@@ -187,8 +187,8 @@
         <div class="icon-box icon-box-green">
           <div class="icon"><img class="iconoimag" src="assets/img/iconos/icono-15.png" alt="Delivery"> <!--<i class="bx bx-tachometer"></i>--></div>
           <!--<h4 class="title"><a href="">Recibí</a></h4>-->
-          <p class="description"><strong>Recibí</strong> dentro de las <br>
-             48hs. y preparate para <br>
+          <p class="description"><strong>Recibí</strong> dentro de las 
+             48hs. y preparate para 
         disfrutar la box del mes.</p>
         </div>
        </div>
