--- a/detalle.html
+++ b/detalle.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Pag detalle est. modificada</title>
+  <title>Pag Detalle</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -51,7 +51,7 @@
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
-          <li class="active"><a href="#hero">Inicio</a></li>
+          <li class="active"><a href="homemodif.html">Inicio</a></li>
          <!-- <li class="drop-down"><a href="">About</a>
             <ul>
               <li><a href="#about">About Us</a></li>
