--- a/detalle.html
+++ b/detalle.html
@@ -241,24 +241,22 @@
               
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
-            <img src="assets/img/testimonials/testimonials-1a.jpg" class="testimonial-img" alt="">
-            <h3>Camila Rodriguez</h3>
+            <img src="assets/img/testimonials/test3.jpg" class="testimonial-img" alt="">
+            <h3>Camila Nevada</h3>
             <h4>San Luis, Argentina</h4>
           </div>
 
           <div class="testimonial-item">
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              LLego todo en tiempo y forma,
-              Luki disfruto mucho de las golosinas y cada juguete.
-              Gracias por darnos una linda y
-              buena experiencia con las box
-              tan increibles. Besos Ro.<br>
+              Una amiga me comento de estas box y me anime a pedir una, fue el
+              comienzo de esta increible experiencia, por lo tanto ahora todos los
+              meses esperamos junto a Oli la Box del mes.<br>
 
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
-            <img src="assets/img/testimonials/testimonials-2a.jpg" class="testimonial-img" alt="">
-            <h3>Luna Vazquez</h3>
+            <img src="assets/img/testimonials/testimonials-3a.jpg" class="testimonial-img" alt="">
+            <h3>Luna Campos</h3>
             <h4>Buenos Aires, Argentina</h4>
           </div>
 
@@ -273,7 +271,7 @@
               mensual durante los prox. años!<br>
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
-            <img src="assets/img/testimonials/testimonials-3a.jpg" class="testimonial-img" alt="">
+            <img src="assets/img/testimonials/test1.jpg" class="testimonial-img" alt="">
             <h3>Romina Diaz</h3>
             <h4>Buenos Aires, Argentina</h4>
           </div>
@@ -281,28 +279,26 @@
           <div class="testimonial-item">
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Las golosinas y juguetes para perros han sido de calidad, enviados a tiempo todos los meses. Estoy muy feliz ... y seguiré suscribiéndome. <br>
+              Las Boxs vienen super completas, ya se las recomende a mis amigos. Yo me incribi por
+              un año y no me arrepiento, todos los meses disfruto ver como Clio se emociona al 
+              ver la BOX en la puerta. ¡Gracias! <br>
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
-            <img src="assets/img/testimonials/testimonials-4a.jpg" class="testimonial-img" alt="">
-            <h3>Matias Guerra</h3>
-            <h4>Cordoba, Argentina</h4>
+            <img src="assets/img/testimonials/test4.jpg" class="testimonial-img" alt="">
+            <h3>Jorge Luna</h3>
+            <h4>Buenos Aires, Argentina</h4>
           </div>
 
           <div class="testimonial-item">
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Gran selección de juguetes para
-              que ella pueda masticar y perseguir.
-              Le encantan todas las golosinas y ha
-              estado aprendiendo muchos trucos.
-              Se emociona cada vez que ve llegar
-              su box.<br>
+              Compre la suscripción por única vez y al ver como cada golosina y
+              juguete era ideal para Lola, no lo pense dos veces y me suscribi al plan anual.  <br>
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
             <img src="assets/img/testimonials/testimonials-5a.jpg" class="testimonial-img" alt="">
-            <h3>Juan Martinez</h3>
-            <h4>Tierra del Fuego, Argentina</h4>
+            <h3>Marcelo Gonzalez</h3>
+            <h4>Corrientes, Argentina</h4>
           </div>
 
         </div>
