--- a/homemodif.html
+++ b/homemodif.html
@@ -458,10 +458,12 @@
           <div class="testimonial-item">
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Nos ENCANTA absolutamente: las colecciones en la caja son siempre muy creativas y divertidas. Las golosinas son saludables y los juguetes están bien hechos y de muy buena calidad.<br>
+              Nos ENCANTA absolutamente: las colecciones en la caja 
+              son siempre muy creativas y divertidas. Las golosinas son 
+              saludables y los juguetes están bien hechos y de muy buena calidad.<br>
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
-            <img src="assets/img/testimonials/testimonials-3a.jpg" class="testimonial-img" alt="">
+            <img src="assets/img/testimonials/test2.jpg" class="testimonial-img" alt="">
             <h3>Julieta Gutierrez</h3>
             <h4>Buenos Aires, Argentina</h4>
           </div>
@@ -469,7 +471,9 @@
           <div class="testimonial-item">
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Las golosinas y juguetes para perros han sido de calidad, enviados a tiempo todos los meses. Estoy muy feliz ... y seguiré suscribiéndome. <br>
+              Las golosinas y juguetes para perros han sido de calidad, 
+              enviados a tiempo todos los meses. Estoy muy feliz ... y 
+              seguiré suscribiéndome. <br>
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
             <img src="assets/img/testimonials/testimonials-4a.jpg" class="testimonial-img" alt="">
@@ -488,7 +492,7 @@
               su box.<br>
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
-            <img src="assets/img/testimonials/testimonials-5a.jpg" class="testimonial-img" alt="">
+            <img src="assets/img/testimonials/test5.jpg" class="testimonial-img" alt="">
             <h3>Juan Martinez</h3>
             <h4>Tierra del Fuego, Argentina</h4>
           </div>
