--- a/homemodif.html
+++ b/homemodif.html
@@ -383,8 +383,8 @@
               <h3>Conocé nuestra historia</h3>
               <p> <!--class="font-italic"-->
                 Somos <strong>Andrea y Romina</strong>, amantes de los perros. Tenemos
-                un lindo Pet Shop ubicado en el barrio de Recoleta, debido a la situación
-                 pandemia se nos ocurrió desarrollar este club
+                un lindo Pet Shop ubicado en el barrio de Recoleta; debido a la situación
+                 de la pandemia se nos ocurrió desarrollar este club
                 exclusivo para brindarles un servicio más practico y que
                 llegue a la comodidad de su hogar.
               </p>
