--- a/detalle.html
+++ b/detalle.html
@@ -1473,7 +1473,7 @@ veterinario para cualquier tipo de consulta.
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/scaffold-bootstrap-metro-style-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by <a href="#">A. Belén Pinto Lavado</a>
       </div>
     </div>
   </footer><!-- End Footer -->
